# atri-chat

./: .env  .env.example  .gitignore  AGENTS.md  API_GUIDE.md  API_GUIDE_MODELS.md  BUILD_README.md  LICENSE  README.md  alembic.ini  app_gradio.py  atri-backend.spec  build.py  check_db_schema.py  cleanup_invalid_bindings.py  debug_vrm_animations.py  main.py  pyi_runtime_hook.py  pyproject.toml  requirements.txt  test_vrm_api.py  启动音频服务.bat  开发计划.md  项目优化.md
.kiro/steering/: rule.md
api/: schemas.py  schemas_runtime.py
api/routes/: agent_stream.py  asr.py  asr_mgmt.py  avatars.py  character_motion_bindings.py  character_motion_bindings_v2.py  characters.py  conversations.py  health.py  messages.py  models.py  motions.py  providers.py  runtime.py  tts.py  tts_providers.py  upload.py  voice_assets.py  vrm.py  vrm_animations.py  vrm_audio.py  vrm_model_animations.py  vrm_models.py
config/: asr.yaml  tts.yaml
core/: README.md  __init__.py  agent_coordinator.py  agent_manager.py  bootstrap.py  config.py  dependencies.py  logger.py  paths.py  process_guard.py  route_registry.py  runtime.py  runtime_layout.py  runtime_status.py  startup_metrics.py  storage.py  store.py
core/agent/: __init__.py  context.py  coordinator.py  factory.py  runtime.py
core/asr/: __init__.py  base.py  crypto.py  factory.py  funasr.py  model_downloader.py  openai_whisper.py  sensevoice.py  service.py
core/callbacks/: __init__.py  llm_call_logger.py  token_usage.py
core/db/: __init__.py  base.py  models.py  utils.py
core/middleware/: __init__.py  config.py  dynamic_model.py  dynamic_prompt.py  dynamic_tools.py  logging_middleware.py  manager.py  persist_messages.py
core/models/: README.md  __init__.py  config.py  factory.py  provider.py  provider_metadata.py  providers.yaml  validator.py
core/prompts/: __init__.py  prompt_manager.py  service.py  templates.py
core/repositories/: __init__.py  base.py  character_repository.py  conversation_repository.py  message_repository.py  model_repository.py  provider_repository.py
core/services/: __init__.py  conversation_service.py  message_service.py  model_service.py  output_strategy.py  sync_service.py
core/tools/: __init__.py  action_tools.py  logger_utils.py  manager.py  memory_tools.py  memory_tools_v3.py  registry.py
core/tts/: __init__.py  base.py  factory.py  genie_tts.py  gpt_sovits.py  qwen_tts.py  registry.py  service.py  synthesis.py
core/utils/: __init__.py  file_naming.py  message_utils.py  short_uuid.py
core/vrm/: __init__.py  audio_generator.py  audio_generator_parallel.py  audio_manager.py  cleanup_task.py  markup_filter.py  markup_parser.py  prompts.py  vrm_service.py
docs/: ARCHITECTURE.md  ASR模块优化记录.md  ASR迁移说明.md  AgentManager使用指南.md  DEVELOPMENT.md  PATH_MANAGEMENT.md  README.md  TTS架构.md  TTS角色绑定.md  TTS集成指南.md  VRM-R3F-Hooks使用规范.md  VRM-R3F-开发手册.md  VRM-R3F-开发指南.md  VRM-R3F-进阶技巧.md  VRM_API_GUIDE.md  VRM_INTEGRATION.md  VRM使用指南.md  VRM动作API.md  VRM渲染系统升级计划.md  VRM驱动设计.md  architecture_upgrade_plan.md  i18n-scripts.md  vrm-animations-guide.md  vrm-emotion-system.md  vrm_logic_fixes.md  中间件管理文档.md  供应商图标集成-完成报告.md  供应商系统说明.md  供应商集成总结.md  依赖注入架构.md  参数渲染优化.md  工具和中间件使用指南.md  工具管理文档.md  日志优化总结.md  日志系统.md  日志系统说明.md  日志级别控制.md  架构设计.md  模型管理.md  模型管理文档.md  (+2 more)
docs/01-入门/: 国际化脚本指南.md  开发指南.md  桌面构建与发布指南.md
docs/02-架构/: TTS 架构.md  供应商系统.md  命令系统.md  日志系统.md  (+4 more)
examples/: agent_manager_example.py  asr_tts_example.py  orm_api_example.py  test_memory_v3.py  test_qwen_tts.py  tools_middleware_example.py
frontend/: .env.development  .env.example  .env.production  .eslintignore  ARCHITECTURE.md  App.tsx  CODE_REVIEW_REPORT.md  CODE_STANDARDS.md  DEVELOPMENT_GUIDE.md  MIGRATION_SUMMARY.md  README.md  VRM_FIX_SUMMARY.md  eslint.config.js  index.html  index.tsx  metadata.json  package-lock.json  package.json  tailwind.config.js  test-cbl.html  test-cha.html  tsc_errors.txt  tsconfig.json  types.ts  vite.config.ts
learn_code/: agent_test.py  checkpoints.sqlite  检查点测试.py
scripts/: bump_version.py  check_characters_table.py  check_tables.py  common.py  download_asr_model.py  drop_old_tables.py  init_db.py  migrate_add_expressions_field.py  migrate_memory_to_v2.py  migrate_motion_ids.py  migrate_remove_logo.py  migrate_vrm_file_naming.py  migrate_vrm_path_optimization.py  migrate_vrm_tables.py  migrate_vrm_to_many_to_many.py  migration_remove_weight.py  release.py  show_db_schema.py  test_api.py  test_auto_init.py  test_bindings_api.py  test_character_api_integration.py  test_character_portrait.py  test_characters_api.py  test_conversations_api.py  test_orm.py  test_portrait_cleanup.py  test_tts_architecture.py  test_tts_refactor.py
tests/: VRM_TEST_README.md  agent_manager_测试.py  agent_stream_e2e.py  asr测试.py  funasr测试.py  play_voice.py  run_vrm_tests.py  store_测试.py  test_action_tools.py  test_agent_stream_e2e.py  test_agent_stream_route.py  test_capability_registry.py  test_health.py  test_health_startup.py  test_logging.py  test_paths.py  test_prompt_assembler.py  test_runtime_feedback.py  test_runtime_status.py  test_tts_registry_lazy_load.py  test_tts_synthesis.py  test_vrm_complete.py  test_vrm_dynamic_mapping.py  test_vrm_e2e.py  test_vrm_fixes.py  test_vrm_many_to_many.py  test_vrm_parser.py  test_vrm_prompts.py  test_vrm_service.py  tts测试.py  中间件测试.py  模型管理测试.py  流式输出测试.py  统一存储测试.py
计划/: Agent核心重构计划.md  TODO.md  VRM背景功能实现计划.md  未尽之事.md
(+267 files in other folders)
