[project]
name = "atri-v2"
version = "0.1.0"
description = "多角色 AI Agent 系统，支持多模型供应商、语音识别和语音合成"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web 框架
    "fastapi>=0.124.1",
    "uvicorn[standard]>=0.38.0",
    # AI 框架核心
    "langchain>=1.1.3",
    "langgraph>=1.0.4",
    "langgraph-checkpoint-sqlite>=3.0.1",
    # LLM 供应商
    "langchain-openai>=1.1.1",
    "langchain-anthropic>=1.2.0",
    "langchain-google-genai>=4.0.0",
    "langchain-community>=0.4.1",
    # 数据库
    "aiosqlite>=0.21.0",
    # HTTP 客户端 (TTS模块需要)
    "httpx>=0.28.1",
    # 日志
    "loguru>=0.7.3",
    # 文件上传
    "python-multipart>=0.0.20",
    # 配置和工具
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
    "dashscope>=1.25.3",
    "pypinyin>=0.55.0",
]

[project.optional-dependencies]
# 语音识别（可选）
asr = [
    "funasr>=1.2.7",
    "modelscope>=1.33.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
]

# 开发工具
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "black>=25.12.0",
    "ruff>=0.14.8",
]

# 完整安装（包含所有可选功能）
all = [
    "atri-v2[asr,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "config"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
