[project]
name = "atri-chat"
version = "0.1.0"
description = "多角色 AI Agent 系统，支持多模型供应商、语音识别和语音合成"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    # Web 框架
    "fastapi[standard]>=0.124.1",
    "uvicorn[standard]>=0.38.0",
    # AI 框架核心
    "langchain>=1.2.0",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-sqlite",
    # 核心驱动 (轻量级)
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-ollama",
    "langchain-deepseek",
    "langchain-qwq",
    "langchain-groq",
    # 厂商独立适配器
    "langchain-mistralai",
    "langchain-xai",
    "langchain-cohere",
    "langchain-fireworks",
    "langchain-perplexity",
    "langchain-upstage",
    # 数据库
    "aiosqlite>=0.21.0",
    # 工具
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
    "pypinyin",
    "psutil",
    "scipy",
    # 语音识别
    "sherpa-onnx>=1.12.29",
    "sherpa-onnx-core>=1.12.29",
    "soundfile",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "black>=25.12.0",
    "ruff>=0.14.8",
    "pyinstaller>=6.19.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
