[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atri-chat"
version = "1.0.1"
description = "多角色 AI Agent 系统，支持多模型供应商、语音识别和语音合成"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "atri-chat contributors" },
]
keywords = ["fastapi", "langchain", "langgraph", "tauri", "vrm", "tts", "asr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]
dependencies = [
    # Web 框架
    "fastapi[standard]",
    "uvicorn[standard]",
    # 核心配置与数据模型
    "pydantic",
    "pydantic-settings",
    "typing-extensions",
    # AI 框架核心
    "langchain",
    "langgraph",
    "langgraph-checkpoint-sqlite",
    # 核心驱动 (轻量级)
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-ollama",
    "langchain-deepseek",
    "langchain-qwq",
    "langchain-groq",
    # 厂商独立适配器
    "langchain-mistralai",
    "langchain-xai",
    "langchain-cohere",
    "langchain-fireworks",
    "langchain-perplexity",
    "langchain-upstage",
    # 数据库
    "sqlalchemy",
    "aiosqlite",
    # 工具
    "httpx",
    "loguru",
    "python-multipart",
    "pyyaml",
    "python-dotenv",
    "pypinyin",
    "psutil",
    "scipy",
    # 语音识别
    "sherpa-onnx",
    "sherpa-onnx-core",
    "soundfile",
]

[project.optional-dependencies]
dev = [
    "black",
    "pyinstaller",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/1sunxiaoshou/atri-chat"
Repository = "https://github.com/1sunxiaoshou/atri-chat"
Issues = "https://github.com/1sunxiaoshou/atri-chat/issues"

[dependency-groups]
dev = [
    "black",
    "pyinstaller",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["api*", "core*"]
exclude = ["data*", "docs*", "examples*", "frontend*", "logs*", "test*", "计划*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "frontend",
    "data",
    "logs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E402", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: 需要真实外部依赖或模型配置的集成测试",
]
